--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,8 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: absolute;
-  width: 100vw;
+  // position: absolute;
+  // width: 100vw;
 }
 
 /* Logo */
