--- a/app/assets/stylesheets/projects/_show.scss
+++ b/app/assets/stylesheets/projects/_show.scss
@@ -5,36 +5,58 @@
   background: transparent;
 }
 
+.banner-project{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: left;
+  height: 400px;
+  border-bottom: solid #ef4343 4px;
+}
+
 .no-deco li {
   list-style-type: none;
 }
 
-.project-left {
-  padding-left: 20px;
-  margin-left: 20px;
-}
+// .project-left {
+//   padding-left: 20px;
+//   margin-left: 20px;
+// }
 
+.project-picture{
+// border-radius: 15px;
+}
 
 .content-projects{
   display: flex;
-  margin-top: -80px;
+  margin-top: -280px;
+  margin-left: 70px;
+  margin-right: 70px;
+  // margin-bottom: 70px;
+
 }
 
 .project-left{
 flex: 0 0 350px;
 margin-right: 30px;
 background: white;
+border: solid #ef4343 4px;
+border-radius: 15px;
 
 }
 
 
 .project-right{
-flex: 0 0 60%;
-padding-top: 30px;
+flex: 1 0 650px;
+padding-top: 330px;
 padding-left: 30px;
 
 }
 
 .wrapper{
+ background: #0a2239;
+}
 
+.project-content{
+ padding:20px;
 }
