--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,23 +1,19 @@
 
 <!-- Header with Background Image -->
 <div class="wrapper">
-<div class="banner banner-profile" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),url('<%= cl_image_path(@project.picture) %>')">
+<div class="banner banner-project" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),url('<%= cl_image_path(@project.picture) %>')">
   <div class="banner-content">
     <h1><%= @project[:title] %></h1>
   </div>
 </div>
 
-   <!--  t.string "description"
-    t.string "picture"
-    t.datetime "start_time"
-    t.datetime "end_time"
-    t.string "location" -->
 
     <!-- Page Content -->
     <div class="content-projects">
       <div class="project-left">
+      <%= cl_image_tag @project.picture, width: 350, height: 350, crop: :fill, class: "project-picture"  %>
 
-
+      <div class="project-content">
        <h2 class="mt-4">Project:</h2>
        <p><%= @project[:description] %></p>
 
@@ -39,7 +35,7 @@
         <% else %>
         <p><%= link_to "Join the project", project_participants_path(@project) , method: :post, class: "btn btn-primary btn-lg" %></p>
         <% end %>
-
+       </div>
 
       </div>
 
@@ -69,15 +65,35 @@
 
 
         <%= render 'comments/form' %>
+        <!-- <div>
         <ul class="no-deco">
           <% @comments.each do |comment| %>
           <li >
             <div>
-              <%= comment.content %>
+              <div class="message">
+                <%= cl_image_tag comment.user.avatar, width: 60, height: 60, crop: :fill%>
+
+
+                <div class="message-body">
+                  <p><strong>I am not sure yet!</strong></p>
+                  <p>
+                    <%= comment.content %>
+                  </p>
+                </div>
+                 <div class="message-name">
+                  <h3>Gab Dehan</h3>
+                  <p>10/07/17</p>
+                </div>
+
+              </div>
+
             </div>
           </li>
           <% end %>
         </ul>
+        </div>
+ -->
+
 
         <!--  <p><%#= link_to "Back to projects", projects_path %></p> -->
 
