--- a/app/assets/stylesheets/projects/_show.scss
+++ b/app/assets/stylesheets/projects/_show.scss
@@ -13,7 +13,7 @@
   justify-content: flex-end;
   align-items: left;
   height: 400px;
-  border-bottom: solid #ef4343 4px;
+  // border-bottom: solid #ef4343 2px;
 }
 
 .no-deco li {
@@ -42,8 +42,9 @@
 flex: 0 0 350px;
 margin-right: 30px;
 background: white;
-border: solid #ef4343 4px;
-border-radius: 15px;
+// border: solid #ef4343 2px;
+// border-radius: 15px;
+box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
 }
 
@@ -56,7 +57,7 @@ padding-left: 30px;
 }
 
 .wrapper{
- background: #0a2239;
+ background: rgb(236, 236, 236);
 }
 
 .project-content{
