--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,8 @@
 
 <!-- Header with Background Image -->
 <div class="wrapper">
-<div class="banner banner-project" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),url('<%= cl_image_path(@project.picture) %>')">
-  <div class="banner-content">
-    <h1><%= @project[:title] %></h1>
-  </div>
+<div class="banner banner-project" style="background-image: linear-gradient(-225deg, rgba(239,67,67,0.6) 0%, rgba(178,12,12,0.6) 50%),url('<%= cl_image_path(@project.picture) %>')">
+
 </div>
 
 
@@ -14,7 +12,7 @@
       <%= cl_image_tag @project.picture, width: 350, height: 350, crop: :fill, class: "project-picture"  %>
 
       <div class="project-content">
-       <h2 class="mt-4">Project:</h2>
+       <h2 class="mt-4"><%= @project[:title] %></h2>
        <p><%= @project[:description] %></p>
 
 
@@ -65,35 +63,24 @@
 
 
         <%= render 'comments/form' %>
-        <!-- <div>
-        <ul class="no-deco">
+
           <% @comments.each do |comment| %>
-          <li >
-            <div>
-              <div class="message">
-                <%= cl_image_tag comment.user.avatar, width: 60, height: 60, crop: :fill%>
+            <div class="comment">
+              <%= cl_image_tag comment.user.avatar, width: 60, height: 60, crop: :fill, class: "comment-avatar"%>
 
 
-                <div class="message-body">
-                  <p><strong>I am not sure yet!</strong></p>
-                  <p>
-                    <%= comment.content %>
-                  </p>
-                </div>
-                 <div class="message-name">
-                  <h3>Gab Dehan</h3>
-                  <p>10/07/17</p>
-                </div>
+               <div class="comment-content">
+                <p>
+                  <%= comment.content%>
+                </p>
+               </div>
 
+              <div >
+                <p><%=comment.user.first_name%> <%=comment.user.last_name%></p>
+                <p>10/07/17</p>
               </div>
-
             </div>
-          </li>
           <% end %>
-        </ul>
-        </div>
- -->
-
 
         <!--  <p><%#= link_to "Back to projects", projects_path %></p> -->
 
